js/js.translator/testData/incremental/invalidation/companionInlineFunction/lib2/l2.0.kt
inline fun foo() = MyClass1.companionMethod()
